--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -416,5 +416,33 @@
     "noResultsDescription": "Try adjusting your search criteria or browse all products.",
     "error": "Failed to load products",
     "errorDescription": "Please try again later."
+  },
+  "cookieConsent": {
+    "title": "We use cookies",
+    "description": "We use cookies to enhance your browsing experience, serve personalized content, and analyze our traffic. By clicking \"Accept All\", you consent to our use of cookies.",
+    "customize": "Customize",
+    "acceptAll": "Accept All",
+    "rejectAll": "Reject All",
+    "savePreferences": "Save Preferences",
+    "preferencesTitle": "Cookie Preferences",
+    "categories": {
+      "necessary": {
+        "title": "Necessary Cookies",
+        "required": "Required",
+        "description": "These cookies are essential for the website to function properly. They cannot be disabled."
+      },
+      "functional": {
+        "title": "Functional Cookies",
+        "description": "These cookies enable enhanced functionality and personalization, such as language preferences and shopping cart."
+      },
+      "analytics": {
+        "title": "Analytics Cookies",
+        "description": "These cookies help us understand how visitors interact with our website by collecting and reporting information anonymously."
+      },
+      "marketing": {
+        "title": "Marketing Cookies",
+        "description": "These cookies are used to track visitors across websites to display relevant and engaging advertisements."
+      }
+    }
   }
 }
