--- a/app/i18n/locales/en/translation.json
+++ b/app/i18n/locales/en/translation.json
@@ -207,19 +207,21 @@
       "firstName": "First Name",
       "lastName": "Last Name",
       "email": "Email",
+      "phone": "Phone Number",
       "subject": "Subject",
-      "orderId": "Order ID (Optional)",
+      "orderId": "Order ID",
       "message": "Message",
       "firstNamePlaceholder": "Enter your first name",
       "lastNamePlaceholder": "Enter your last name",
       "emailPlaceholder": "Enter your email",
+      "phonePlaceholder": "Enter your phone number",
       "subjectPlaceholder": "Enter message subject",
       "orderIdPlaceholder": "Enter order ID if related to an order",
       "messagePlaceholder": "Enter your message",
       "sendMessage": "Send Message",
       "sending": "Sending...",
       "success": "Message sent successfully!",
-      "error": "Failed to send message. Please try again."
+      "error": "Failed to send message. Please try again later or contact us directly at {{email}}"
     },
     "validation": {
       "firstNameRequired": "First name is required",
